# zarr-byterangerequest-microbenchmarks

./: .gitignore  .pre-commit-config.yaml  README.md  create_run.py  create_store.py  plot-results.ipynb  pyproject.toml  run-benchmarks.sh  time_get_dataclass.py  time_get_key.py  time_get_range_dataclass.py  time_get_range_startlength.py  time_get_range_startstop.py  time_get_range_typeddict.py  time_get_tuple.py  time_get_typeddict.py  timings.csv  utils.py
