[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zarr-byterangerequest-microbenchmarks"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Max Jones", email = "14077947+maxrjones@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pandas",
]

[project.urls]
Documentation = "https://github.com/maxrjones/zarr-byterangerequest-microbenchmarks#readme"
Issues = "https://github.com/maxrjones/zarr-byterangerequest-microbenchmarks/issues"
Source = "https://github.com/maxrjones/zarr-byterangerequest-microbenchmarks"


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/zarr_byterangerequest_microbenchmarks tests}"

[tool.hatch.envs.tuple]
python = "3.13"
dependencies = [
    'zarr[optional] @ git+https://github.com/zarr-developers/zarr-python@22ebded93aa88ae1e5f87f6711fa7057ca2e8478',
]

[tool.hatch.envs.dataclass]
python = "3.13"
dependencies = [
    'zarr[optional] @ git+https://github.com/maxrjones/zarr-python@literate-byte-ranges',
]

[tool.hatch.envs.analysis]
python = "3.13"
dependencies = [
    'ipykernel',
    'matplotlib',
    'scipy',
    'papermill',
]

[tool.coverage.run]
source_pkgs = []
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
